// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Pagination Cozy 1`] = `
<div
  style="height: 200px"
>
  
    
  <div
    class="fd-pagination"
  >
    
        
    <div
      class="fd-pagination__per-page"
    >
      
            
      <label
        class="fd-form-label fd-pagination__per-page-label"
        id="selectLabel"
      >
        Results per page: 
      </label>
      
            
            
      <div
        class="fd-popover"
      >
        
                
        <div
          class="fd-popover__control"
        >
          
                    
          <div
            class="fd-select"
          >
            
                        
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="selectLabel selectValue"
              class="fd-select__control"
              id="compactSelectCombobox"
              onclick="
                                        toggleElAttrs('h0C6A327', ['aria-hidden']);
                                        toggleElAttrs('selectCombobox', ['aria-expanded']);
                                    "
              tabindex="0"
            >
              
                            
              <span
                class="fd-select__text-content"
                id="selectValue"
              >
                4
              </span>
              
                            
              <span
                class="fd-button fd-button--transparent fd-select__button"
              >
                
                                
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                            
              </span>
              
                        
            </button>
            
                    
          </div>
          
                
        </div>
        
                
                
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
          id="h0C6A327"
        >
          
                    
          <ul
            aria-activedescendant="selectCombobox-currentlyFocusedItem"
            aria-labelledby="selectLabel"
            class="fd-list fd-list--dropdown fd-list"
            role="listbox"
          >
            
                        
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              id="selectCombobox-currentlyFocusedItem"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                4
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                8
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                16
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                32
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
        
    <nav
      class="fd-pagination__nav"
    >
      
            
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
            
      </a>
      
            
            
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
            
      </a>
      
            
            
      <a
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      
            
            
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      
            
            
      <a
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      
            
            
      <label
        class="fd-form-label fd-pagination__input-label"
        for="cozyPageInput"
      >
        Page:
      </label>
      
            
            
      <input
        class="fd-input fd-pagination__input"
        id="cozyPageInput"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      
            
            
      <a
        aria-disabled="true"
        aria-label="Next"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
            
      </a>
      
            
            
      <a
        aria-disabled="true"
        aria-label="Last"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
            
      </a>
      
        
    </nav>
    
      
        
    <div
      class="fd-pagination__total"
    >
      
            
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination First page 1`] = `
<section>
  <style>
    *[dir='rtl'] .fd-pagination__button { transform: rotate(180deg) !important; }
  </style>
  

  <div
    class="fd-pagination"
  >
    
    
    <nav
      class="fd-pagination__nav"
    >
      
        
      <div
        style=""
      >
        
        
        
      </div>
      
        
      <a
        aria-disabled="true"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      
        
        
      <a
        aria-disabled="true"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      
        
        
      <label
        class="fd-form-label fd-pagination__input-label"
        for="firstPageInput"
      >
        Page:
      </label>
      
        
        
      <input
        class="fd-input fd-input--compact fd-pagination__input"
        id="firstPageInput"
        max="3"
        min="1"
        required=""
        type="number"
        value="1"
      />
      
        
        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        2
      </a>
      
        
        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        3
      </a>
      
        
        
      <a
        aria-disabled="false"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      
        
        
      <a
        aria-disabled="false"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    
  
    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        3 Results
      </span>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Pagination Last page 1`] = `
<div
  class="fd-pagination"
>
  
    
  <nav
    class="fd-pagination__nav"
  >
    
        
    <a
      aria-disabled="false"
      aria-label="First"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--media-rewind"
      />
      
        
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Previous"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--navigation-left-arrow"
      />
      
        
    </a>
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      1
    </a>
    
        
        
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      499
    </a>
    
        
        
    <label
      class="fd-form-label fd-pagination__input-label"
      for="lastPageInput"
    >
      Page:
    </label>
    
        
        
    <input
      class="fd-input fd-input--compact fd-pagination__input"
      id="lastPageInput"
      max="500"
      min="1"
      required=""
      type="number"
      value="500"
    />
    
        
        
    <a
      aria-disabled="true"
      aria-label="Next"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--navigation-right-arrow"
      />
      
        
    </a>
    
        
        
    <a
      aria-disabled="true"
      aria-label="Last"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--media-forward"
      />
      
        
    </a>
    
    
  </nav>
  
  
    
  <div
    class="fd-pagination__total"
  >
    
        
    <span
      class="fd-form-label fd-pagination__total-label"
    >
      500 Results
    </span>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination Middle pages 1`] = `
<div
  class="fd-pagination"
>
  
    
  <nav
    class="fd-pagination__nav"
  >
    
        
    <a
      aria-disabled="false"
      aria-label="First"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--media-rewind"
      />
      
        
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Previous"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--navigation-left-arrow"
      />
      
        
    </a>
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      1
    </a>
    
        
        
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      299
    </a>
    
        
        
    <label
      class="fd-form-label fd-pagination__input-label"
      for="middlePageInput"
    >
      Page:
    </label>
    
        
        
    <input
      class="fd-input fd-input--compact fd-pagination__input"
      id="middlePageInput"
      max="500"
      min="1"
      required=""
      type="number"
      value="300"
    />
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      301
    </a>
    
        
        
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      500
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Next"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--navigation-right-arrow"
      />
      
        
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Last"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--media-forward"
      />
      
        
    </a>
    
    
  </nav>
  
  
    
  <div
    class="fd-pagination__total"
  >
    
        
    <span
      class="fd-form-label fd-pagination__total-label"
    >
      500 Results
    </span>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination Mobile 1`] = `
<iframe
  height="210"
  src="/iframe.html?id=components-pagination--per-page"
  title="Mobile pagination"
  width="400"
/>
`;

exports[`Storyshots Components/Pagination Multiple pages 1`] = `
<div
  class="fd-pagination"
>
  
    
  <nav
    class="fd-pagination__nav"
  >
    
        
    <a
      aria-disabled="true"
      aria-label="First"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--media-rewind"
      />
      
        
    </a>
    
        
        
    <a
      aria-disabled="true"
      aria-label="Previous"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--navigation-left-arrow"
      />
      
        
    </a>
    
        
        
    <label
      class="fd-form-label fd-pagination__input-label"
      for="multiplePageInput"
    >
      Page:
    </label>
    
        
        
    <input
      class="fd-input fd-input--compact fd-pagination__input"
      id="multiplePageInput"
      max="500"
      min="1"
      required=""
      type="number"
      value="1"
    />
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      2
    </a>
    
        
        
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      500
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Next"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--navigation-right-arrow"
      />
      
        
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Last"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--media-forward"
      />
      
        
    </a>
    
    
  </nav>
  
  
    
  <div
    class="fd-pagination__total"
  >
    
        
    <span
      class="fd-form-label fd-pagination__total-label"
    >
      500 Results
    </span>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination Per page 1`] = `
<div
  style="height: 175px"
>
  
    
  <div
    class="fd-pagination"
  >
    
        
    <div
      class="fd-pagination__per-page"
    >
      
            
      <label
        class="fd-form-label fd-pagination__per-page-label"
        id="compactSelectLabel"
      >
        Results per page: 
      </label>
      
            
            
      <div
        class="fd-popover"
      >
        
                
        <div
          class="fd-popover__control"
        >
          
                    
          <div
            class="fd-select fd-select--compact"
          >
            
                        
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="compactSelectLabel compactSelectValue"
              class="fd-select__control"
              id="compactSelectCombobox"
              onclick="
                                        toggleElAttrs('h0C6A326', ['aria-hidden']);
                                        toggleElAttrs('compactSelectCombobox', ['aria-expanded']);
                                    "
              tabindex="0"
            >
              
                          
              <span
                class="fd-select__text-content"
                id="compactSelectValue"
              >
                4
              </span>
              
                          
              <span
                class="fd-button fd-button--transparent fd-select__button"
              >
                
                                        
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                                    
              </span>
              
                        
            </button>
            
                    
          </div>
          
                
        </div>
        
                
                
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
          id="h0C6A326"
        >
          
                    
          <ul
            aria-activedescendant="compactSelectCombobox-currentlyFocusedItem"
            aria-labelledby="compactSelectLabel"
            class="fd-list fd-list--dropdown fd-list--compact"
            role="listbox"
          >
            
                        
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              id="compactSelectCombobox-currentlyFocusedItem"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                4
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                8
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                16
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                32
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
        
    <nav
      class="fd-pagination__nav"
    >
      
            
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
            
      </a>
      
            
            
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
            
      </a>
      
            
            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      
            
            
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      
            
            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      
            
            
      <label
        class="fd-form-label fd-pagination__input-label"
        for="perPageInput"
      >
        Page:
      </label>
      
            
            
      <input
        class="fd-input fd-input--compact fd-pagination__input"
        id="perPageInput"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      
            
            
      <a
        aria-disabled="true"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
            
      </a>
      
            
            
      <a
        aria-disabled="true"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
            
      </a>
      
        
    </nav>
    
      
        
    <div
      class="fd-pagination__total"
    >
      
            
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination Second page 1`] = `
<div
  class="fd-pagination"
>
  
    
  <nav
    class="fd-pagination__nav"
  >
    
        
    <a
      aria-disabled="false"
      aria-label="First"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--media-rewind"
      />
      
        
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Previous"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--navigation-left-arrow"
      />
      
        
    </a>
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      1
    </a>
    
        
        
    <label
      class="fd-form-label fd-pagination__input-label"
      for="secondPageInput"
    >
      Page:
    </label>
    
        
        
    <input
      class="fd-input fd-input--compact fd-pagination__input"
      id="secondPageInput"
      max="3"
      min="1"
      required=""
      type="number"
      value="2"
    />
    
        
        
    <a
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
      href="#"
    >
      3
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Next"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--navigation-right-arrow"
      />
      
        
    </a>
    
        
        
    <a
      aria-disabled="false"
      aria-label="Last"
      class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
      href="#"
    >
      
            
      <i
        class="sap-icon sap-icon--media-forward"
      />
      
        
    </a>
    
    
  </nav>
  
  
    
  <div
    class="fd-pagination__total"
  >
    
        
    <span
      class="fd-form-label fd-pagination__total-label"
    >
      3 Results
    </span>
    
    
  </div>
  

</div>
`;
